1999-07-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.m: Include jni.h.
	(Java_swarm_SwarmEnvironment_initSwarm): Add JNI{EXPORT,CALL}.  

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm.dll): Add "--add-stdcall-alias --entry
	__cygwin_noncygwin_dll_entry@12".

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (modulePROTOCOLS): Use $(module)_creatable_PROTOCOLS.

1999-06-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in ($(libjavaswarmstubs_la_OBJECTS)): Depend on 
	defobj/{directory.h,defobj.h}.

1999-06-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): Add
	call to libjavaswarm[stubs]_constructor for hpux.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in: Remove intermediate _.la libraries.

1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm.dll): Filter out objc.dll.o.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm.dll): For consistency, use javaswarm.dll.o
	instead of dllinit.o.
	(javaswarm.dll): Use local dllinit file.  Remove -L to libobjc.
	(libjavaswarm.la): Use it.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (javaswarm_entities, javaswarm_OBJECTS,
	javaswarmstubs_OBJECTS): New variables.
	(libjavaswarm__la_OBJECTS): Use javaswarm_entities.  Remove setup.lo.
	(javaswarm.dll): Use javaswarm_OBJECTS and javaswarmstubs_OBJECTS.

1999-06-05    <mgd@HELEN>

	* Makefile.in (javaswarm.dll): Use .o instead of .lo stubs files.

1999-06-05    <mgd@HELEN>

	* Makefile.in (javaswarm.dll): Remove constructor stuff.  Use wildcard
	reference to objects in their respective modules.  Don't use libraries
	for Swarm things.

1999-06-04    <mgd@HELEN>

	* Makefile.in (install-{la,dll}): Depend on `all'.

1999-05-31  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
